--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<li><a href="contactUs.html">Contact us</a></li>
 	</ul>
 
-	<mani>
+	<main>
 		<section>
       <!--A simple introduction to industrial engineering --> 
 			<p>
