add css changes

--- a/index.html
+++ b/index.html
@@ -5,23 +5,30 @@
 	<!-- Information about Industrial engineer and his work fields-->
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Industrial Engineer </title>
+	<title class="darkblue"> Industrial Engineer </title>
 </head>
+<link rel="stylesheet" href="style.css">
 
 <body>
-	<header></header>
-	<h1>INDUSTRIAL ENGINEER </h1>
-	<ul>
-		<li><a href="https://en.wikipedia.org/wiki/Industrial_engineering#Origins">Origin</a></li>
-		<li><a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fbrainstudy.info%2Fimages%2F%25D8%25A8%25D9%2588%25D8%25A7%25D8%25A8%25D8%25A9-%25D8%25A7%25D9%2584%25D8%25B7%25D8%25A7%25D9%2584%25D8%25A8-%25D8%25AC%25D8%25A7%25D9%2585%25D8%25B9%25D8%25A9-%25D9%2587%25D8%25A7%25D8%25B4%25D9%2585%25D9%258A%25D8%25A9&psig=AOvVaw0JC1cyFXVheRai3EwWt2sx&ust=1625145594078000&source=images&cd=vfe&ved=0CAoQjRxqFwoTCOiS2aC5v_ECFQAAAAAdAAAAABAD">Tree</a></li>
+	<header>
+		<div>
+			<h1>INDUSTRIAL ENGINEER </h1>
+		</div>
+		<nav> 
+      <ul>
+      
+        <li><a href="https://en.wikipedia.org/wiki/Industrial_engineering#Origins">Origin</a></li>
+        <li><a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fbrainstudy.info%2Fimages%2F%25D8%25A8%25D9%2588%25D8%25A7%25D8%25A8%25D8%25A9-%25D8%25A7%25D9%2584%25D8%25B7%25D8%25A7%25D9%2584%25D8%25A8-%25D8%25AC%25D8%25A7%25D9%2585%25D8%25B9%25D8%25A9-%25D9%2587%25D8%25A7%25D8%25B4%25D9%2585%25D9%258A%25D8%25A9&psig=AOvVaw0JC1cyFXVheRai3EwWt2sx&ust=1625145594078000&source=images&cd=vfe&ved=0CAoQjRxqFwoTCOiS2aC5v_ECFQAAAAAdAAAAABAD">Tree</a></li>
 
-		<li><a href="contactUs.html">Contact us</a></li>
-	</ul>
-
+        <li><a href="contactUs.html">Contact us</a></li>
+      </ul>
+	  </nav>
+	</header>
 	<main>
 		<section>
-      <!--A simple introduction to industrial engineering --> 
-			<p>
+			<!--A simple introduction to industrial engineering -->
+			<p id="bluevioletp">
+
 				Industrial engineering is an engineering profession that is concerned with the optimization of complex processes, systems,
 				or organizations by developing, improving and implementing integrated systems of people,money, knowledge, information
 				and equipment.
@@ -38,14 +45,15 @@
 			</p>
 		</section>
 
-    <section>
-    <!--Add four pictures of the industrial engineer's work fields-->
+		<section>
+			<!--Add four pictures of the industrial engineer's work fields-->
 
-		<h2>Industrial engineer workplaces</h2>
-		<p>An industrial engineer can work in more than one place, for example:</p>
-    <div>
-      <h3>In factories </h3>
-      <img src="https://c8.alamy.com/comp/HY66K4/industrial-engineer-working-in-the-factory-with-talking-on-the-walkie-HY66K4.jpg" alt="https://online.norwich.edu/sites/default/files/content/resources/header/201.jpg">
+			<h2 class="darkblue">Industrial engineer workplaces</h2>
+			<p class="darkblue">
+				An industrial engineer can work in more than one place, for example:</p>
+			<div>
+				<h3>In factories </h3>
+				<img src="https://c8.alamy.com/comp/HY66K4/industrial-engineer-working-in-the-factory-with-talking-on-the-walkie-HY66K4.jpg" alt="https://online.norwich.edu/sites/default/files/content/resources/header/201.jpg">
     </div>
 
     <div>
@@ -63,31 +71,37 @@
       </div>
 
 		</section>
+
     <section>
-      <h1 style="border:2px solid DodgerBlue;">Famous Industrial Engineers</h1>
   
-     <p><h2> &#128119 </h2>  </p>
+      <h1 id="blue">
+        Famous Industrial Engineers
+        <h2> &#128119 </h2>
+      </h1>
 
       <ol>
-        <li>Henry Ford (1863-1947)</li> 
-         <li>Eli Whitney (1765-1825)</li>
-         <li>Lillian Gilbreth (1878-1972)</li>
-         <li>Alphonse Chapanis (1917-2002)</li>
-         <li>Tim Cook</li>
-        
+        <li>Henry Ford (1863-1947)</li>
+        <li>Eli Whitney (1765-1825)</li>
+        <li>Lillian Gilbreth (1878-1972)</li>
+        <li> Alphonse Chapanis (1917-2002)</li>
+        <li>Tim Cook </li>
       </ol>
+
     </section>
 
 
 	</main>
 
-	<footer>
-		&copy;Sarah Darwish 2021
-	</footer>
-<script src="app.js">
+  <footer> <P id="footerP"> &copy;Sarah Darwish 2021 </P> 
+  </footer>
+
+  <script src="app.js">
+
   </script>
-  
+
 
 </body>
+
+
 
 </html>
